[package]
name = "ruthenium"
version = "0.1.0"
edition = "2021"

[[bin]]
name="poc_auth"
path="src/poc_auth.rs"

[[bin]]
name="poc_ldap"
path="src/poc_ldap.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.21"
ldap3_proto = "0.2.3"
reqwest = { version="0.11.10", features=["blocking"] }
tokio = { version = "^1.17.0", features = ["rt-multi-thread", "io-util", "net", "signal", "macros"] }
tokio-util = { version = "^0.7.1", features = ["codec"] }